--- a/package.json
+++ b/package.json
@@ -29,18 +29,24 @@
     "@refinedev/core": "^5.0.4",
     "@refinedev/react-router": "^2.0.1",
     "@refinedev/simple-rest": "^6.0.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@uiw/react-md-editor": "^4.0.8",
     "antd": "^5.23.0",
     "axios": "^1.6.0",
+    "query-string": "^9.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.8.3",
     "vite": "^5.4.15"
   },
