--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "@refinedev/antd": "^6.0.2",
     "@refinedev/cli": "^2.16.49",
     "@refinedev/core": "^5.0.4",
-    "@refinedev/react-router": "^2.0.1",
+    "@refinedev/react-router": "^2.0.2",
     "@refinedev/simple-rest": "^6.0.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/leaflet": "^1.9.21",
     "@uiw/react-md-editor": "^4.0.8",
     "antd": "^5.23.0",
     "axios": "^1.6.0",
+    "leaflet": "^1.9.4",
     "query-string": "^9.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.0.2"
   },
   "devDependencies": {
